public/style.css
body {
	-webkit-user-select: none;
	padding: 0; margin: 0;
	font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
	font-size: 75%;
	background-image: url('/background.jpg');
	background-attachment: fixed;
	background-size: 100%;
	overflow-x: hidden;
}

table {
	white-space: nowrap;
	width: 100%;
	border-collapse: collapse;
	overflow-x: hidden;
	margin-bottom: 1em;
}

.squad-list tr:nth-child(12) { border-bottom: 3px solid black; }
.league-table tr:nth-last-child(1) { background-color: rgba(255, 180, 180, 0.5); }
.league-table tr:nth-last-child(2) { background-color: rgba(255, 180, 180, 0.5); }
.league-table tr:nth-last-child(3) { background-color: rgba(255, 180, 180, 0.5); }
.league-table tr:nth-child(2) { background-color: rgba(180, 255, 180, 0.5); }
.league-table tr:nth-child(3) { background-color: rgba(180, 255, 180, 0.5); }
.league-table tr:nth-child(4) { background-color: rgba(180, 255, 180, 0.5); }

.login { font-size: 200%; }
.login form { margin: 20px; }
.login label { display: block; margin: 5px; }
.login input { border: 0px;margin: 5px; padding: 5px; }
.login input[type="submit"] { padding: 10px 40px; background-color: rgba(150, 150, 255, 0.5); }

span.player-position-badge { border-radius: 5px; padding: 0 3px; }
span.player-position-GK { background-color: #f7f; }
span.player-position-DR, span.player-position-DL, span.player-position-DC { background-color: #77f; }
span.player-position-DMR, span.player-position-DML, span.player-position-DMC { background-color: #7c7; }
span.player-position-MR, span.player-position-ML, span.player-position-MC { background-color: #ff7; }
span.player-position-AMR, span.player-position-AML, span.player-position-AMC { background-color: #fa7; }
span.player-position-CF { background-color: #f77; }

tr.fixture-own { font-weight: bold; }

.player-detailed-view td:nth-child(1) { font-weight: bold; }

.game-summary-Home { text-align: right; margin-right: 10px; }
.game-summary-Away { text-align: left; margin-left: 10px; }
.game-time { float: right; text-align: right; margin-right: 5px; }
.game-message { float: left; margin-left: 5px; font-weight: bold;}
.game-button-jump-to-end { position: absolute; }

button.action {
	background-color: rgba(150, 150, 255, 0.5);
	padding: 10px;
	font-weight: bold;
	margin: 10px;
}

button {
	outline: none;
	border: 0;
}

button.circle-button {
	width: 40px;
	height: 40px;
	border-radius: 20px;
	text-align: center;
	vertical-align: center;
	padding: 0;
	font-size: 200%;
	background-color: rgba(150, 150, 255, 0.5);
	margin: 0px 10px;
	float: left;
}

div.half-width {
	width: 49%;
	float: left;
}

h1,h2,h3,h4,h5,h6 {
	text-align: center;
}

h4 { margin: 5px 0px; }

tr {
	border-bottom: 1px solid grey;
}

td, th {
	padding: 0.5em 0.2em;
	text-align: left;
}

th {
	background-color: rgba(150, 150, 255, 0.5);
}

div.main-content {
	clear: both;
}

div.view {
	margin: 0;
}

